Add mensagem de erro ao logar

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="username">Usuario</string>
     <string name="password">Senha</string>
     <string name="login">Acessar</string>
+    <string name="auth_error">Erro de autenticação</string>
 
 </resources>
