--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,11 @@
 <resources>
-
+    <string name="confirm_travel_delete">Deseja excluir a viagem?</string>
+    <string name="yes">Sim</string>
+    <string name="no">Não</string>
+    <string name="edit">Editar</string>
+    <string name="spents_realized">Gastos Realizados</string>
+    <string name="remove">Remover</string>
+    <string name="options">Opções</string>
     <string name="app_name">MyTravel</string>
     <string name="username">Usuario</string>
     <string name="password">Senha</string>
