--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="travel_create">Viagem Criada com sucesso!</string>
     <string name="travel_create_error">Erro ao criar viagem :(</string>
     
+    <string name="spent_create">Gasto criado com sucesso!</string>
+    <string name="spent_create_error">Erro ao criar gasto :(</string>
+    
     <string name="confirm_travel_delete">Deseja excluir a viagem?</string>
     <string name="yes">Sim</string>
     <string name="no">Não</string>
